--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body, figure{
 .information-title {
     font-size: 1.6vw;
     font-family: Roboto-Medium ,Georgia, 'Times New Roman', Times, serif ;
-    margin: 3vw 44.1vw;
+    margin: 3vw 43vw;
     font-weight: bold;
 }
 
@@ -109,7 +109,10 @@ body, figure{
 }
 
 .header {
-    padding: 0.5vw 20vw;
+    padding-top: 0.5vw;
+    padding-left: 20%;
+    padding-right: 20%;
+    width: 60%;
 }
 
 .navbar{
@@ -117,7 +120,7 @@ body, figure{
 }
 
 .footer{
-    width: 100vw;
+    width: 100%;
     height: 1.5vw;
     background-color: #1F2937;
     padding: 1vw 0;
@@ -132,10 +135,6 @@ body, figure{
     flex-grow: 20;
     font-family: Roboto-Medium, Georgia, 'Times New Roman', Times, serif;
     font-size: 1vw;
-}
-
-.hero-content{
-    width: 100vw;
 }
 
 .hero-content-text{
@@ -205,7 +204,7 @@ body, figure{
 }
 
 .standard-size {
-    width: 100vw;
+    width: 100%;
     height: 24vw;
 }
 
